src/ast/ptnet/PTNETParser.java
// Generated from PTNET.g4 by ANTLR 4.5.3

	package ast.ptnet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PTNETParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONST=1, ELSE=2, IF=3, THEN=4, BOOLLIT=5, INT=6, BOOLEAN=7, STRING=8, 
		FLOAT=9, SEARCH=10, CON=11, ADD=12, SUB=13, MUL=14, DIV=15, MOD=16, GT=17, 
		GTE=18, LT=19, LTE=20, EQ=21, NE=22, OR=23, AND=24, NOT=25, DOT=26, COMMA=27, 
		LP=28, RP=29, LB=30, RB=31, LS=32, RS=33, COLON=34, SEMI=35, EQUAL=36, 
		ASSIGN=37, ID=38, INTLIT=39, FLOATLIT=40, STRINGLIT=41, ILLEGAL_ESCAPE=42, 
		UNCLOSE_STRING=43, WS=44, LINE_COMMENT=45, COMMENT=46, ERROR_CHAR=47;
	public static final int
		RULE_program = 0, RULE_varDec = 1, RULE_constDec = 2, RULE_type = 3, RULE_constant = 4, 
		RULE_funcDec = 5, RULE_varLocal = 6, RULE_stmt = 7, RULE_block = 8, RULE_asnStmt = 9, 
		RULE_ifStmt = 10, RULE_srcStmt = 11, RULE_expr = 12, RULE_buf1 = 13, RULE_buf2 = 14, 
		RULE_buf3 = 15, RULE_buf4 = 16, RULE_buf5 = 17, RULE_buf6 = 18, RULE_buf7 = 19, 
		RULE_buf8 = 20, RULE_funcCall = 21;
	public static final String[] ruleNames = {
		"program", "varDec", "constDec", "type", "constant", "funcDec", "varLocal", 
		"stmt", "block", "asnStmt", "ifStmt", "srcStmt", "expr", "buf1", "buf2", 
		"buf3", "buf4", "buf5", "buf6", "buf7", "buf8", "funcCall"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'const'", "'else'", "'if'", "'then'", null, "'int'", "'boolean'", 
		"'string'", "'float'", "'search'", "'^'", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "'>'", "'>='", "'<'", "'<='", null, "'!='", "'||'", "'&&'", "'!'", 
		"'.'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", 
		null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CONST", "ELSE", "IF", "THEN", "BOOLLIT", "INT", "BOOLEAN", "STRING", 
		"FLOAT", "SEARCH", "CON", "ADD", "SUB", "MUL", "DIV", "MOD", "GT", "GTE", 
		"LT", "LTE", "EQ", "NE", "OR", "AND", "NOT", "DOT", "COMMA", "LP", "RP", 
		"LB", "RB", "LS", "RS", "COLON", "SEMI", "EQUAL", "ASSIGN", "ID", "INTLIT", 
		"FLOATLIT", "STRINGLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "WS", "LINE_COMMENT", 
		"COMMENT", "ERROR_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PTNET.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PTNETParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<VarDecContext> varDec() {
			return getRuleContexts(VarDecContext.class);
		}
		public VarDecContext varDec(int i) {
			return getRuleContext(VarDecContext.class,i);
		}
		public List<ConstDecContext> constDec() {
			return getRuleContexts(ConstDecContext.class);
		}
		public ConstDecContext constDec(int i) {
			return getRuleContext(ConstDecContext.class,i);
		}
		public List<FuncDecContext> funcDec() {
			return getRuleContexts(FuncDecContext.class);
		}
		public FuncDecContext funcDec(int i) {
			return getRuleContext(FuncDecContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(46);
				switch (_input.LA(1)) {
				case INT:
				case BOOLEAN:
				case STRING:
				case FLOAT:
					{
					setState(44);
					varDec();
					}
					break;
				case CONST:
					{
					setState(45);
					constDec();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << INT) | (1L << BOOLEAN) | (1L << STRING) | (1L << FLOAT))) != 0) );
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(50);
				funcDec();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PTNETParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PTNETParser.ASSIGN, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PTNETParser.SEMI, 0); }
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			type();
			setState(57);
			match(ID);
			setState(58);
			match(ASSIGN);
			setState(59);
			constant();
			setState(60);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDecContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(PTNETParser.CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PTNETParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PTNETParser.ASSIGN, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PTNETParser.SEMI, 0); }
		public ConstDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitConstDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDecContext constDec() throws RecognitionException {
		ConstDecContext _localctx = new ConstDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(CONST);
			setState(63);
			type();
			setState(64);
			match(ID);
			setState(65);
			match(ASSIGN);
			setState(66);
			constant();
			setState(67);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PTNETParser.INT, 0); }
		public TerminalNode BOOLEAN() { return getToken(PTNETParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(PTNETParser.STRING, 0); }
		public TerminalNode FLOAT() { return getToken(PTNETParser.FLOAT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << STRING) | (1L << FLOAT))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode INTLIT() { return getToken(PTNETParser.INTLIT, 0); }
		public TerminalNode BOOLLIT() { return getToken(PTNETParser.BOOLLIT, 0); }
		public TerminalNode STRINGLIT() { return getToken(PTNETParser.STRINGLIT, 0); }
		public TerminalNode FLOATLIT() { return getToken(PTNETParser.FLOATLIT, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLLIT) | (1L << INTLIT) | (1L << FLOATLIT) | (1L << STRINGLIT))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDecContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PTNETParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FuncDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitFuncDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDecContext funcDec() throws RecognitionException {
		FuncDecContext _localctx = new FuncDecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ID);
			setState(74);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarLocalContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PTNETParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PTNETParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PTNETParser.SEMI, 0); }
		public VarLocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varLocal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitVarLocal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarLocalContext varLocal() throws RecognitionException {
		VarLocalContext _localctx = new VarLocalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varLocal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			type();
			setState(77);
			match(ID);
			setState(78);
			match(ASSIGN);
			setState(79);
			expr();
			setState(80);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public AsnStmtContext asnStmt() {
			return getRuleContext(AsnStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public SrcStmtContext srcStmt() {
			return getRuleContext(SrcStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmt);
		try {
			setState(86);
			switch (_input.LA(1)) {
			case LB:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				block();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				asnStmt();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				ifStmt();
				}
				break;
			case SEARCH:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				srcStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(PTNETParser.LB, 0); }
		public TerminalNode RB() { return getToken(PTNETParser.RB, 0); }
		public List<VarLocalContext> varLocal() {
			return getRuleContexts(VarLocalContext.class);
		}
		public VarLocalContext varLocal(int i) {
			return getRuleContext(VarLocalContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(LB);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOLEAN) | (1L << STRING) | (1L << FLOAT))) != 0)) {
				{
				{
				setState(89);
				varLocal();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SEARCH) | (1L << LB) | (1L << ID))) != 0)) {
				{
				{
				setState(95);
				stmt();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsnStmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PTNETParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PTNETParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PTNETParser.SEMI, 0); }
		public AsnStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asnStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitAsnStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsnStmtContext asnStmt() throws RecognitionException {
		AsnStmtContext _localctx = new AsnStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_asnStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ID);
			setState(104);
			match(ASSIGN);
			setState(105);
			expr();
			setState(106);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PTNETParser.IF, 0); }
		public TerminalNode LP() { return getToken(PTNETParser.LP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RP() { return getToken(PTNETParser.RP, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PTNETParser.ELSE, 0); }
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(IF);
			setState(109);
			match(LP);
			setState(110);
			expr();
			setState(111);
			match(RP);
			setState(112);
			stmt();
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(113);
				match(ELSE);
				setState(114);
				stmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SrcStmtContext extends ParserRuleContext {
		public TerminalNode SEARCH() { return getToken(PTNETParser.SEARCH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PTNETParser.SEMI, 0); }
		public SrcStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_srcStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitSrcStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SrcStmtContext srcStmt() throws RecognitionException {
		SrcStmtContext _localctx = new SrcStmtContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_srcStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(SEARCH);
			setState(118);
			expr();
			setState(119);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<Buf1Context> buf1() {
			return getRuleContexts(Buf1Context.class);
		}
		public Buf1Context buf1(int i) {
			return getRuleContext(Buf1Context.class,i);
		}
		public TerminalNode GT() { return getToken(PTNETParser.GT, 0); }
		public TerminalNode GTE() { return getToken(PTNETParser.GTE, 0); }
		public TerminalNode LT() { return getToken(PTNETParser.LT, 0); }
		public TerminalNode LTE() { return getToken(PTNETParser.LTE, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expr);
		int _la;
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				buf1();
				setState(122);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GTE) | (1L << LT) | (1L << LTE))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(123);
				buf1();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				buf1();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Buf1Context extends ParserRuleContext {
		public List<Buf2Context> buf2() {
			return getRuleContexts(Buf2Context.class);
		}
		public Buf2Context buf2(int i) {
			return getRuleContext(Buf2Context.class,i);
		}
		public TerminalNode EQ() { return getToken(PTNETParser.EQ, 0); }
		public TerminalNode NE() { return getToken(PTNETParser.NE, 0); }
		public Buf1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_buf1; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitBuf1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Buf1Context buf1() throws RecognitionException {
		Buf1Context _localctx = new Buf1Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_buf1);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				buf2(0);
				setState(129);
				_la = _input.LA(1);
				if ( !(_la==EQ || _la==NE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(130);
				buf2(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				buf2(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Buf2Context extends ParserRuleContext {
		public Buf3Context buf3() {
			return getRuleContext(Buf3Context.class,0);
		}
		public Buf2Context buf2() {
			return getRuleContext(Buf2Context.class,0);
		}
		public TerminalNode AND() { return getToken(PTNETParser.AND, 0); }
		public TerminalNode OR() { return getToken(PTNETParser.OR, 0); }
		public Buf2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_buf2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PTNETVisitor ) return ((PTNETVisitor<? extends T>)visitor).visitBuf2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Buf2Context buf2() throws RecognitionException {
		return buf2(0);
	}

	private Buf2Context buf2(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Buf2Context _localctx = new Buf2Context(_ctx, _parentState);
		Buf2Context _prevctx = _localctx;
		int _startState = 28;
		enterRecursionRule(_localctx, 28, RULE_buf2, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			buf3(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(143);
			_errHandler.sync(this);
